syntax = "proto3";

package streamforge.v1;

option go_package = "github.com/streamforge/streamforge/proto/streamforge/v1;streamforgev1";
option java_multiple_files = true;
option java_outer_classname = "CommonProto";
option java_package = "com.streamforge.v1";

import "google/protobuf/timestamp.proto";

// 共通のメトリクスデータ型
message Metric {
  string name = 1;
  double value = 2;
  MetricType type = 3;
  map<string, string> labels = 4;
  google.protobuf.Timestamp timestamp = 5;
  string unit = 6;
}

// メトリクスタイプ
enum MetricType {
  METRIC_TYPE_UNSPECIFIED = 0;
  METRIC_TYPE_COUNTER = 1;
  METRIC_TYPE_GAUGE = 2;
  METRIC_TYPE_HISTOGRAM = 3;
  METRIC_TYPE_SUMMARY = 4;
}

// ログエントリ
message LogEntry {
  string level = 1;
  string message = 2;
  map<string, string> fields = 3;
  google.protobuf.Timestamp timestamp = 4;
  string service = 5;
  string trace_id = 6;
  string span_id = 7;
}

// トレーススパン
message Span {
  string trace_id = 1;
  string span_id = 2;
  string parent_span_id = 3;
  string name = 4;
  string service = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
  map<string, string> tags = 8;
  repeated LogEntry logs = 9;
}

// アラート
message Alert {
  string id = 1;
  string name = 2;
  string description = 3;
  AlertSeverity severity = 4;
  AlertStatus status = 5;
  map<string, string> labels = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  string source = 9;
}

// アラートの重要度
enum AlertSeverity {
  ALERT_SEVERITY_UNSPECIFIED = 0;
  ALERT_SEVERITY_INFO = 1;
  ALERT_SEVERITY_WARNING = 2;
  ALERT_SEVERITY_ERROR = 3;
  ALERT_SEVERITY_CRITICAL = 4;
}

// アラートのステータス
enum AlertStatus {
  ALERT_STATUS_UNSPECIFIED = 0;
  ALERT_STATUS_FIRING = 1;
  ALERT_STATUS_RESOLVED = 2;
  ALERT_STATUS_ACKNOWLEDGED = 3;
}

// サービス情報
message Service {
  string name = 1;
  string version = 2;
  string environment = 3;
  map<string, string> metadata = 4;
  ServiceStatus status = 5;
  google.protobuf.Timestamp last_heartbeat = 6;
}

// サービスのステータス
enum ServiceStatus {
  SERVICE_STATUS_UNSPECIFIED = 0;
  SERVICE_STATUS_HEALTHY = 1;
  SERVICE_STATUS_DEGRADED = 2;
  SERVICE_STATUS_UNHEALTHY = 3;
  SERVICE_STATUS_OFFLINE = 4;
}

// データポイント
message DataPoint {
  google.protobuf.Timestamp timestamp = 1;
  double value = 2;
  map<string, string> labels = 3;
}

// 時系列データ
message TimeSeries {
  string name = 1;
  repeated DataPoint points = 2;
  map<string, string> labels = 3;
} 